<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blacky.geoalarmv2.EditAlarmActivity"
    android:weightSum="1">

    <TextView android:text="@string/radius_label_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/textView"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:layout_above="@+id/delButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/smallMap"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/alarmOn"
        android:layout_marginBottom="25dp" />

    <SeekBar
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="1000"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/smallMap"
        android:layout_toEndOf="@+id/textView"
        android:progress="1"
        android:layout_alignStart="@+id/alarmDesc" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_switch_label_string"
        android:id="@+id/alarmOn"
        android:textSize="22sp"
        android:checked="false"
        android:enabled="true"
        android:layout_above="@+id/nameLabel"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_del_button_string"
        android:id="@+id/delButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/seekBar"
        android:layout_alignParentEnd="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_save_button_string"
        android:id="@+id/saveButton"
        android:layout_alignTop="@+id/delButton"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/alarmOn"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmName"
        android:layout_marginLeft="15dp"
        android:layout_alignEnd="@+id/smallMap"
        android:layout_toEndOf="@+id/nameLabel"
        android:inputType="textCapWords"
        android:layout_alignBottom="@+id/nameLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm_name_label_string"
        android:id="@+id/nameLabel"
        android:textColor="#000"
        android:textSize="22sp"
        android:labelFor="@id/alarmName"
        android:layout_above="@+id/descLabel"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/alarm_desc_label_string"
        android:id="@+id/descLabel"
        android:textColor="#000"
        android:textSize="22sp"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/nameLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/alarmDesc"
        android:layout_alignBottom="@+id/descLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/alarmName"
        android:layout_below="@+id/alarmName" />

</RelativeLayout>